public/css/styles.css
body {
    font-family: Arial, Helvetica, sans-serif;
}

header {
    text-align: center;
    margin-top: 50px;
}

a {
    text-decoration: none;
    padding: 10px 20px 10px 20px;
    border-radius: 10px;
    margin-left: 80px;
    margin-right: 80px;
    border-bottom: 1px solid black;
    font-family: 'Alegreya', serif;
    font-size: 18px;
}

h1 {
    text-align: center;
    font-size: 36px;
    margin-top: 40px;
    font-family: 'Merriweather Sans', sans-serif;
}

h2 {
    text-align: center;
    font-size: 18px;
    font-style: italic;
    font-weight: 100;
    font-family: 'Comfortaa', cursive;
}

form {
    display: flex;
    flex-direction: column;
    margin-left: auto;
    margin-right: auto;
    width: min-content;
}

input {
    margin: 25px;
    border-radius: 10px;
    font-size: 20px;
    padding: 5px;
    font-family: 'Alegreya', serif;
}

button {
    font-size: 18px;
    font-weight: bold;
    padding: 5px;
    font-family: 'Alegreya', serif;
}

#loading-error {
    text-align: center;
}

.main-content {
    text-align: center;
    margin-top: 80px;
}

.temperatures {
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.atmosphere_wind {
    display: flex;
    flex-direction: row;
    justify-content: center;
    text-align: left;
}

#location, #description {
    font-size: 20px;
    text-align: center;
    font-family: 'Alegreya Sans', sans-serif;
}

#temp_title {
    font-family: 'Alegreya Sans', sans-serif;
    font-weight: bold;
    font-size: 24px;
}

.temperatures {
    margin-top: 40px;
    margin-bottom: 40px;
}

.temp_box {
    border: 1px solid black;
    padding: 50px;
    padding-top: 20px;
    padding-bottom: 20px;
    border-radius: 5px;
    margin-left: 5px;
    margin-right: 5px;
}

#fahrenheit_temp, #celsius_temp, #kelvin_temp {
    font-size: 28px;
    font-family: 'Comfortaa', sans-serif;
}

#fahrenheit_feels, #celsius_feels, #kelvin_feels {
    font-size: 18px;
    font-weight: lighter;
    font-style: italic;
    font-family: 'Comfortaa', sans-serif;

}

.atmosphere_wind {
    margin-bottom: 40px;
}

.atmosphere, .wind {
    margin-left: 90px;
    margin-right: 90px;
}

#humidity, #precipitation, #pressure, #w_speed, #w_degree, #w_direction {
    border-top: 1px solid black;
    border-bottom: 2px solid black;
    border-radius: 10px;
    padding: 10px;
    font-family: 'Alegreya Sans', sans-serif;
    font-size: 18px;
}

